tests/lean/1079.lean.expected.out
1079.lean:3:2-6:12: error: alternative 'isFalse' has not been provided
[Meta.Tactic.simp.rewrite] h:1000, m ==> n
[Meta.Tactic.simp.rewrite] @eq_self:1000, n = n ==> True
[Meta.Tactic.simp.unify] @eq_self:1000, failed to unify
      ?a = ?a
    with
      Ordering.eq = Ordering.lt
[Meta.Tactic.simp.unify] @forall_exists_index:1000, failed to unify
      ∀ (h : ∃ x, ?p x), ?q h
    with
      False → False
[Meta.Tactic.simp.unify] @forall_eq:1000, failed to unify
      ∀ (a : ?α), a = ?a' → ?p a
    with
      False → False
[Meta.Tactic.simp.unify] @forall_eq':1000, failed to unify
      ∀ (a : ?α), ?a' = a → ?p a
    with
      False → False
[Meta.Tactic.simp.unify] @forall_eq_or_imp:1000, failed to unify
      ∀ (a : ?α), a = ?a' ∨ ?q a → ?p a
    with
      False → False
[Meta.Tactic.simp.unify] @forall_apply_eq_imp_iff:1000, failed to unify
      ∀ (b : ?β) (a : ?α), ?f a = b → ?p b
    with
      False → False
[Meta.Tactic.simp.unify] @forall_eq_apply_imp_iff:1000, failed to unify
      ∀ (b : ?β) (a : ?α), b = ?f a → ?p b
    with
      False → False
[Meta.Tactic.simp.unify] @forall_apply_eq_imp_iff₂:1000, failed to unify
      ∀ (b : ?β) (a : ?α), ?p a → ?f a = b → ?q b
    with
      False → False
[Meta.Tactic.simp.rewrite] @imp_self:1000, False → False ==> True
